--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 #mainframe{
     width: 100%;
-    height: 865px;
+    height: 700px;
     background-color: red;
     position: relative;
 }
@@ -9,7 +9,7 @@
     position: absolute;
     background-color: white;
     width: 94%;
-    height:750px;
+    height:600px;
     top: 6%;
     left: 3%;
 
@@ -20,4 +20,12 @@
     height: 20px;
     width: 20px;
     background-color: black;
+}
+
+
+#food{
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    background-color: green;
 }
