--- a/main.css
+++ b/main.css
@@ -29,3 +29,10 @@
     width: 20px;
     background-color: green;
 }
+
+div{
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    background-color: black;
+}
