--- a/main.css
+++ b/main.css
@@ -1,48 +1,78 @@
-#mainframe{
-    width: 100%;
-    height: 700px;
-    background-color: red;
-    position: relative;
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 95vw;
+  height: 95vh;
+  background-image: url("./images/background.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-#innerframe{
-    position: absolute;
-    background-color: white;
-    width: 94%;
-    height:600px;
-    top: 6%;
-    left: 3%;
+#mainframe {
+  margin: 2vw;
+  width: 80vw;
+  height: 70vh;
+  background-color: rgba(20, 235, 206, 0.3);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 0 20px rgba(70, 70, 70, 0.9);
 }
 
-#Start{
-    margin-left: 1350px;
-    margin-top: 20px;
+#innerframe {
+  position: absolute;
+  margin: 1vw;
+  background-color: white;
+  width: 75vw;
+  height: 60vh;
 }
 
-#score{
-    margin-left: 1250px;
-    margin-top: 20px;
-    width: 200px;
+#Start {
+  margin-left: 1350px;
+  margin-top: 20px;
 }
 
-#initialBlock{
-    position: absolute;
-    height: 20px;
-    width: 20px;
-    background-color: grey;
+#score {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  margin: 1vw;
+  border-radius: 10px;
+  font-size: 1.5vw;
+  /* background-color: rgba(14, 211, 136, 0.9); */
+  color: rgba(230, 230, 230);
+  box-shadow: 0 0 10px rgba(70, 70, 70);
 }
 
-
-#food{
-    position: absolute;
-    height: 20px;
-    width: 20px;
-    background-color: green;
+#initialBlock {
+  position: absolute;
+  height: 20px;
+  width: 20px;
+  background-color: green;
 }
 
-div{
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    background-color: black;
+#food {
+  position: absolute;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  background-image: url("./images/egg.png");
+  background-size: cover;
+}
+
+#follower {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background-image: url("./images/skin.png");
+  background-size: contain;
+}
+
+.header {
+  width: 50%;
+  display: flex;
+  justify-content: space-between;
 }
